--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
                         <a href="#" class="btn-text">Learn More &rarr;</a>
                     </div>
 
-                    <div class="col1of2">Image composition</div>
+                    <div class="col1of2">
+                        <div class="composition">
+                            <img src="img/nat-1-large.jpg" alt="photo" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="photo" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="photo" class="composition__photo composition__photo--p3">
+                        </div>
+                    </div>
                 </div>      
             </section>
         </main>
