--- a/index.html
+++ b/index.html
@@ -330,6 +330,32 @@
                 </div>
             </section>
         </main>
+
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img src="img/logo-green-2x.png" alt="full logo" class="footer__logo">
+            </div>
+
+            <div class="row">
+                <div class="col1of2">
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Carreers</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col1of2">
+                    <p class="footer__copyright">
+                        Built by <a href="#" class="footer__link">BK</a> for the online course <a href="#" class="footer__link">Advanced CSS and SASS</a>. Copuright &copy; by Jonas Schmedtmann. Commercial and personal use of this design is allowed, however credit for the design must go to Jonas Schmedtmann.
+                    </p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
     
